Fix button overflow on medium resolutions

--- a/skins/laika/src/scss/custom.scss
+++ b/skins/laika/src/scss/custom.scss
@@ -79,4 +79,25 @@
 @import "~buefy/src/scss/buefy";
 @import "~bulma-helpers/sass/helpers/spacing/margin-padding";
 
+.summary-wrapper {
+	border: 2px solid $fun-color-gray-light-solid;
+	padding: 18px;
+	@include until($widescreen) {
+		.level {
+			flex-wrap: wrap;
+		}
+		.level-item, button {
+			width: 100%;
+		}
+		button {
+			margin: 5px 0;
+		}
+	}
+}
+
+.external-notice {
+	color: $fun-color-dark-lighter;
+}
+
+
 @import "overrides";
